--- a/Web/API/appsettings.json
+++ b/Web/API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "SmtpServer": "smtp.mail.ru",
+    "SmtpPort": 587,
+    "SenderEmail": "publicmailforcoursework@mail.ru",
+  }
 }
+  
