--- a/Web/BusinessLogic/BusinessLogic.csproj
+++ b/Web/BusinessLogic/BusinessLogic.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\DataModels\DataModels.csproj" />
   </ItemGroup>
